jb-4 feature: adjusted routing for image -> calorie calculation functionality with new regex filter + mealDescritpion parameter resolution
